tests/negative/ownership/assignment_double_move.tx
// Negative test: using object after moving it via assignment
// Expected: E0103 Use of moved variable

class Item { name: string; }

function main() {
    let a = new Item();
    a.name = "Widget";
    let b = a;           // a moved to b
    let c = a;           // ERROR: a already moved to b
}
